--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ wp-config.php
 # Note: If you wish to whitelist themes,
 # uncomment the next line
 #/wp-content/themes
+
+# Backups
+sensitive_database/
+admin_files/
